UI and other changes

--- a/models/ntest.ipynb
+++ b/models/ntest.ipynb
@@ -140,6 +140,93 @@
     "prediction = fraud_predictor.predict(sample_transaction)\n",
     "print(prediction)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6fd26d91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction: Not Fraud\n",
+      "Fraud Probability: 0.4100\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import xgboost as xgb\n",
+    "import pickle\n",
+    "\n",
+    "# Load model and encoders\n",
+    "model = xgb.XGBClassifier()\n",
+    "model.load_model(\"structured_postpay_xgb_model.json\")\n",
+    "with open(\"label_encoders.pkl\", \"rb\") as f:\n",
+    "    label_encoders = pickle.load(f)\n",
+    "\n",
+    "# Example input data (fill with realistic values according to your dataset)\n",
+    "input_data = {\n",
+    "    \"payment_method\": \"Credit Card\",\n",
+    "    \"device_type\": \"Mobile\",\n",
+    "    \"delivery_status\": \"Delivered\",\n",
+    "    \"return_requested\": 0,\n",
+    "    \"return_reason\": \"None\",\n",
+    "    \"item_returned\": 0,\n",
+    "    \"item_condition\": \"N/A\",\n",
+    "    \"refund_issued\": 0,\n",
+    "    \"refund_amount\": 0.0,\n",
+    "    \"chargeback_requested\": 0,\n",
+    "    \"chargeback_reason\": \"None\",\n",
+    "    \"account_age_days\": 300,\n",
+    "    \"order_history_count\": 10,\n",
+    "    \"return_rate\": 0.05,\n",
+    "    \"chargeback_rate\": 0.0,\n",
+    "    \"transaction_amount\": 15000.0,\n",
+    "    # \"support_tickets_opened\": 1\n",
+    "}\n",
+    "\n",
+    "# Convert input to DataFrame\n",
+    "df_input = pd.DataFrame([input_data])\n",
+    "\n",
+    "# Encode categorical columns using saved label encoders\n",
+    "for col, le in label_encoders.items():\n",
+    "    if col in df_input.columns:\n",
+    "        df_input[col] = df_input[col].astype(str)\n",
+    "        # Handle unseen categories by extending classes (optional)\n",
+    "        if df_input[col].iloc[0] not in le.classes_:\n",
+    "            le.classes_ = np.append(le.classes_, df_input[col].iloc[0])\n",
+    "        df_input[col] = le.transform(df_input[col])\n",
+    "\n",
+    "# Get model feature order\n",
+    "feature_order = model.get_booster().feature_names\n",
+    "\n",
+    "# Add any missing features with default values (e.g., 0)\n",
+    "for feat in feature_order:\n",
+    "    if feat not in df_input.columns:\n",
+    "        df_input[feat] = 0\n",
+    "\n",
+    "# Reorder columns as model expects\n",
+    "df_input = df_input[feature_order]\n",
+    "\n",
+    "# Predict probability and class\n",
+    "pred_proba = model.predict_proba(df_input)[:, 1][0]\n",
+    "pred_class = model.predict(df_input)[0]\n",
+    "\n",
+    "print(f\"Prediction: {'Fraud' if pred_class == 1 else 'Not Fraud'}\")\n",
+    "print(f\"Fraud Probability: {pred_proba:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccfe472f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -158,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
